DIUNISIO2.0/src/DiunisioParser.java
// Generated from C:/Users/Zylfrox/IdeaProjects/DIUNISIO2.0/src\Diunisio.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DiunisioParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PUBLICO=1, PRIVADO=2, PROTEGIDO=3, ESTATICO=4, FINAL=5, ABSTRACTO=6, NUEVO=7, 
		PUNTO=8, ESTO=9, IMPLEMENTA=10, EXTIENDE=11, SUPERCLASE=12, INTERFAZ=13, 
		CLASE=14, VOID=15, COMENTARIO=16, ALGORITMO=17, TERMINA=18, ENTONCES=19, 
		O=20, Y=21, IGUAL=22, DIFERENTE=23, MAYOR=24, MENOR=25, MAY_IGUAL=26, 
		MEN_IGUAL=27, SUMA=28, MENOS=29, MULT=30, DIV=31, MOD=32, POTENCIA=33, 
		NO=34, DEF=35, RETORNAR=36, INT=37, FLOAT=38, STRING=39, BOOL=40, MATRIZ=41, 
		VECTOR=42, PCOMA=43, ASIGNAR=44, PAREN_AP=45, PAREN_CI=46, LLAVEIZ=47, 
		LLAVEDE=48, ANGIZ=49, ANGDE=50, COMA=51, DOSPUNTOS=52, VERDADERO=53, FALSO=54, 
		NULO=55, SI=56, SI_NO=57, MIENTRAS=58, SELECCIONAR=59, CASO=60, ROMPER=61, 
		HACER=62, PARA=63, DEFECTO=64, CLASEID=65, IDENTIFICADOR=66, ENTERO=67, 
		REAL=68, COMPLEJO=69, CADENA=70, ESPACIO=71, OTRO=72;
	public static final int
		RULE_algoritmo = 0, RULE_diunisio20 = 1, RULE_declaracionClase = 2, RULE_bloque_clase = 3, 
		RULE_clase_body = 4, RULE_llamada_metodo = 5, RULE_constructor = 6, RULE_bloque_constructor = 7, 
		RULE_superclase = 8, RULE_asignacion_esto = 9, RULE_asignacion_obj = 10, 
		RULE_objeto = 11, RULE_metodo = 12, RULE_modificador = 13, RULE_acceso = 14, 
		RULE_diunisio10 = 15, RULE_lista_ids = 16, RULE_exp_simple = 17, RULE_expresion = 18, 
		RULE_variable = 19, RULE_termino = 20, RULE_factor = 21, RULE_lista_parsv = 22, 
		RULE_conjunto = 23, RULE_tipo = 24, RULE_bloque = 25, RULE_sec_proposiciones = 26, 
		RULE_proposicion = 27, RULE_asignacion = 28, RULE_si_senten = 29, RULE_bloque_condicional = 30, 
		RULE_mientras_senten = 31, RULE_hacer_mientras_senten = 32, RULE_seleccionar_senten = 33, 
		RULE_casos = 34, RULE_para_senten = 35, RULE_fun_senten = 36, RULE_proc_senten = 37, 
		RULE_funcion = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"algoritmo", "diunisio20", "declaracionClase", "bloque_clase", "clase_body", 
			"llamada_metodo", "constructor", "bloque_constructor", "superclase", 
			"asignacion_esto", "asignacion_obj", "objeto", "metodo", "modificador", 
			"acceso", "diunisio10", "lista_ids", "exp_simple", "expresion", "variable", 
			"termino", "factor", "lista_parsv", "conjunto", "tipo", "bloque", "sec_proposiciones", 
			"proposicion", "asignacion", "si_senten", "bloque_condicional", "mientras_senten", 
			"hacer_mientras_senten", "seleccionar_senten", "casos", "para_senten", 
			"fun_senten", "proc_senten", "funcion"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'publico'", "'privado'", "'protegido'", "'estatico'", "'final'", 
			"'abstracto'", "'nuevo'", "'.'", "'esto'", "'implementa'", "'extiende'", 
			"'super'", "'interfaz'", "'clase'", "'void'", null, "'ALGORITMO'", "'..'", 
			"'entonces'", "'||'", "'&&'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", 
			"'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'!'", "'def'", "'retornar'", 
			"'entero'", "'decimal'", "'cadena'", "'booleano'", "'matriz'", "'vector'", 
			"';'", "'='", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "':'", 
			"'verdadero'", "'falso'", "'nulo'", "'si'", "'si_no'", "'mientras'", 
			"'seleccionar'", "'caso'", "'romper'", "'hacer'", "'para'", "'defecto'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PUBLICO", "PRIVADO", "PROTEGIDO", "ESTATICO", "FINAL", "ABSTRACTO", 
			"NUEVO", "PUNTO", "ESTO", "IMPLEMENTA", "EXTIENDE", "SUPERCLASE", "INTERFAZ", 
			"CLASE", "VOID", "COMENTARIO", "ALGORITMO", "TERMINA", "ENTONCES", "O", 
			"Y", "IGUAL", "DIFERENTE", "MAYOR", "MENOR", "MAY_IGUAL", "MEN_IGUAL", 
			"SUMA", "MENOS", "MULT", "DIV", "MOD", "POTENCIA", "NO", "DEF", "RETORNAR", 
			"INT", "FLOAT", "STRING", "BOOL", "MATRIZ", "VECTOR", "PCOMA", "ASIGNAR", 
			"PAREN_AP", "PAREN_CI", "LLAVEIZ", "LLAVEDE", "ANGIZ", "ANGDE", "COMA", 
			"DOSPUNTOS", "VERDADERO", "FALSO", "NULO", "SI", "SI_NO", "MIENTRAS", 
			"SELECCIONAR", "CASO", "ROMPER", "HACER", "PARA", "DEFECTO", "CLASEID", 
			"IDENTIFICADOR", "ENTERO", "REAL", "COMPLEJO", "CADENA", "ESPACIO", "OTRO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Diunisio.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DiunisioParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class AlgoritmoContext extends ParserRuleContext {
		public Diunisio10Context diunisio10() {
			return getRuleContext(Diunisio10Context.class,0);
		}
		public Diunisio20Context diunisio20() {
			return getRuleContext(Diunisio20Context.class,0);
		}
		public AlgoritmoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_algoritmo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).enterAlgoritmo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).exitAlgoritmo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DiunisioVisitor ) return ((DiunisioVisitor<? extends T>)visitor).visitAlgoritmo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AlgoritmoContext algoritmo() throws RecognitionException {
		AlgoritmoContext _localctx = new AlgoritmoContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_algoritmo);
		try {
			setState(80);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ALGORITMO:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				diunisio10();
				}
				break;
			case PUBLICO:
			case PRIVADO:
			case PROTEGIDO:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				diunisio20();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Diunisio20Context extends ParserRuleContext {
		public DeclaracionClaseContext declaracionClase() {
			return getRuleContext(DeclaracionClaseContext.class,0);
		}
		public Diunisio20Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_diunisio20; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).enterDiunisio20(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).exitDiunisio20(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DiunisioVisitor ) return ((DiunisioVisitor<? extends T>)visitor).visitDiunisio20(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Diunisio20Context diunisio20() throws RecognitionException {
		Diunisio20Context _localctx = new Diunisio20Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_diunisio20);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			declaracionClase();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionClaseContext extends ParserRuleContext {
		public AccesoContext acceso() {
			return getRuleContext(AccesoContext.class,0);
		}
		public TerminalNode CLASE() { return getToken(DiunisioParser.CLASE, 0); }
		public List<TerminalNode> CLASEID() { return getTokens(DiunisioParser.CLASEID); }
		public TerminalNode CLASEID(int i) {
			return getToken(DiunisioParser.CLASEID, i);
		}
		public Bloque_claseContext bloque_clase() {
			return getRuleContext(Bloque_claseContext.class,0);
		}
		public TerminalNode EXTIENDE() { return getToken(DiunisioParser.EXTIENDE, 0); }
		public TerminalNode IMPLEMENTA() { return getToken(DiunisioParser.IMPLEMENTA, 0); }
		public TerminalNode FINAL() { return getToken(DiunisioParser.FINAL, 0); }
		public TerminalNode ESTATICO() { return getToken(DiunisioParser.ESTATICO, 0); }
		public DeclaracionClaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionClase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).enterDeclaracionClase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).exitDeclaracionClase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DiunisioVisitor ) return ((DiunisioVisitor<? extends T>)visitor).visitDeclaracionClase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionClaseContext declaracionClase() throws RecognitionException {
		DeclaracionClaseContext _localctx = new DeclaracionClaseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracionClase);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			acceso();
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ESTATICO || _la==FINAL) {
				{
				setState(85);
				_la = _input.LA(1);
				if ( !(_la==ESTATICO || _la==FINAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(88);
			match(CLASE);
			setState(89);
			match(CLASEID);
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTIENDE) {
				{
				setState(90);
				match(EXTIENDE);
				setState(91);
				match(CLASEID);
				}
			}

			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IMPLEMENTA) {
				{
				setState(94);
				match(IMPLEMENTA);
				setState(95);
				match(CLASEID);
				}
			}

			setState(98);
			bloque_clase();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bloque_claseContext extends ParserRuleContext {
		public TerminalNode LLAVEIZ() { return getToken(DiunisioParser.LLAVEIZ, 0); }
		public TerminalNode LLAVEDE() { return getToken(DiunisioParser.LLAVEDE, 0); }
		public List<Clase_bodyContext> clase_body() {
			return getRuleContexts(Clase_bodyContext.class);
		}
		public Clase_bodyContext clase_body(int i) {
			return getRuleContext(Clase_bodyContext.class,i);
		}
		public Bloque_claseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque_clase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).enterBloque_clase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).exitBloque_clase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DiunisioVisitor ) return ((DiunisioVisitor<? extends T>)visitor).visitBloque_clase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bloque_claseContext bloque_clase() throws RecognitionException {
		Bloque_claseContext _localctx = new Bloque_claseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bloque_clase);
		int _la;
		try {
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				match(LLAVEIZ);
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLICO) | (1L << PRIVADO) | (1L << PROTEGIDO) | (1L << ESTATICO) | (1L << FINAL) | (1L << ABSTRACTO) | (1L << SUPERCLASE) | (1L << VOID) | (1L << DEF) | (1L << RETORNAR) | (1L << INT) | (1L << FLOAT) | (1L << STRING) | (1L << BOOL) | (1L << MATRIZ) | (1L << VECTOR) | (1L << LLAVEIZ) | (1L << SI) | (1L << MIENTRAS) | (1L << SELECCIONAR) | (1L << HACER) | (1L << PARA))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (CLASEID - 65)) | (1L << (IDENTIFICADOR - 65)) | (1L << (OTRO - 65)))) != 0)) {
					{
					{
					setState(101);
					clase_body();
					}
					}
					setState(106);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(107);
				match(LLAVEDE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				match(LLAVEIZ);
				setState(109);
				match(LLAVEDE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Clase_bodyContext extends ParserRuleContext {
		public ProposicionContext proposicion() {
			return getRuleContext(ProposicionContext.class,0);
		}
		public ObjetoContext objeto() {
			return getRuleContext(ObjetoContext.class,0);
		}
		public MetodoContext metodo() {
			return getRuleContext(MetodoContext.class,0);
		}
		public Asignacion_objContext asignacion_obj() {
			return getRuleContext(Asignacion_objContext.class,0);
		}
		public ConstructorContext constructor() {
			return getRuleContext(ConstructorContext.class,0);
		}
		public Llamada_metodoContext llamada_metodo() {
			return getRuleContext(Llamada_metodoContext.class,0);
		}
		public Clase_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clase_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).enterClase_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).exitClase_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DiunisioVisitor ) return ((DiunisioVisitor<? extends T>)visitor).visitClase_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Clase_bodyContext clase_body() throws RecognitionException {
		Clase_bodyContext _localctx = new Clase_bodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_clase_body);
		try {
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				proposicion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				objeto();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(114);
				metodo();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(115);
				asignacion_obj();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(116);
				constructor();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(117);
				llamada_metodo();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Llamada_metodoContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFICADOR() { return getTokens(DiunisioParser.IDENTIFICADOR); }
		public TerminalNode IDENTIFICADOR(int i) {
			return getToken(DiunisioParser.IDENTIFICADOR, i);
		}
		public TerminalNode PUNTO() { return getToken(DiunisioParser.PUNTO, 0); }
		public Lista_parsvContext lista_parsv() {
			return getRuleContext(Lista_parsvContext.class,0);
		}
		public TerminalNode PCOMA() { return getToken(DiunisioParser.PCOMA, 0); }
		public TerminalNode SUPERCLASE() { return getToken(DiunisioParser.SUPERCLASE, 0); }
		public Llamada_metodoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_llamada_metodo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).enterLlamada_metodo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).exitLlamada_metodo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DiunisioVisitor ) return ((DiunisioVisitor<? extends T>)visitor).visitLlamada_metodo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Llamada_metodoContext llamada_metodo() throws RecognitionException {
		Llamada_metodoContext _localctx = new Llamada_metodoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_llamada_metodo);
		try {
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFICADOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				match(IDENTIFICADOR);
				setState(121);
				match(PUNTO);
				setState(122);
				match(IDENTIFICADOR);
				setState(123);
				lista_parsv();
				setState(124);
				match(PCOMA);
				}
				break;
			case SUPERCLASE:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				match(SUPERCLASE);
				setState(127);
				match(PUNTO);
				setState(128);
				match(IDENTIFICADOR);
				setState(129);
				lista_parsv();
				setState(130);
				match(PCOMA);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructorContext extends ParserRuleContext {
		public AccesoContext acceso() {
			return getRuleContext(AccesoContext.class,0);
		}
		public TerminalNode CLASEID() { return getToken(DiunisioParser.CLASEID, 0); }
		public Lista_parsvContext lista_parsv() {
			return getRuleContext(Lista_parsvContext.class,0);
		}
		public TerminalNode LLAVEIZ() { return getToken(DiunisioParser.LLAVEIZ, 0); }
		public TerminalNode LLAVEDE() { return getToken(DiunisioParser.LLAVEDE, 0); }
		public List<Bloque_constructorContext> bloque_constructor() {
			return getRuleContexts(Bloque_constructorContext.class);
		}
		public Bloque_constructorContext bloque_constructor(int i) {
			return getRuleContext(Bloque_constructorContext.class,i);
		}
		public ConstructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).enterConstructor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).exitConstructor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DiunisioVisitor ) return ((DiunisioVisitor<? extends T>)visitor).visitConstructor(this);
			else return visitor.visitChildren(this);
		}
	}
